# stats

./: .gitignore  Dockerfile.api  Dockerfile.ui  Makefile  README.md  aggregate-hourly-downloads-triggers2.yml  cloudbuild-api.yaml  cloudbuild-deploy-api.yaml  hourly-edge-requests-triggers2.yml  pyproject.toml  service-api-dev.yaml  service-api.yaml
.github/: dependabot.yml  pull_request_template.md  run-aggregate-hourly-downloads-unit-tests.yml  run-api-unit-tests.yml
.github/workflows/: aggregate-hourly-downloads-trigger.yml  aggregate-hourly-downloads-triggers.yml  build-push-api.yml  build-push-stats-api.yml  build-push-stats-ui.yml  build-stats-api.yml  deploy-aggregate-hourly-downloads.yml  deploy-function.yml  deploy-function2.yml  deploy-or-update-stats-db.yml  deploy-stats-api.yml  deploy-stats-db.yml  deploy-stats-ui.yml  deploy.yml  format-check-and-deploy-aggregate-hourly-downloads.yml  hourly-edge-requests-triggers.yml  lint-and-deploy-stats-db-migrations.yml  lint-and-test-aggregate-hourly-downloads.yml  lint-and-test-api.yml  lint-stats-db-migrations.yml  lint-test-api.yml  lint-test-function.yml  lint-test-stats-functions.yml  monthly-downloads-triggers.yml  monthly-submissions-triggers.yml  stats-api-triggers.yml
cicd/: cloudbuild-deploy-api.yaml  cloudbuild-deploy-hourly-downloads.yaml  cloudbuild-deploy-ui.yaml  env.aggregate_hourly_downloads.arxiv-development.yaml  env.aggregate_hourly_downloads.arxiv-production.yaml  service-api-dev.yaml  service-hourly-downloads-dev.yaml  service-hourly-downloads-prod.yaml  service-ui-dev.yaml
cicd/aggregate-hourly-downloads/: dev.tfvars  main.tf  prod.tfvars  variables.tf
stats/: config.py  factory.py
stats-api/: Dockerfile.api  Makefile  README.md  docker-compose.local.yaml  pyproject.toml  twf  wftest  wftest2  workflowtest
stats-api/stats_api/: app.py  config.py  database.py  exception.py  factory.py  models.py  repository.py  respository.py  routes.py  service.py  utils.py
stats-api/stats_api/config/: app.py  database.py  logging.py  urls.py
stats-api/stats_api/routes/: api.py
stats-api/stats_api/services/: api_utils.py
stats-api/stats_api/static/js/: optin-modal.js
stats-api/stats_api/static/old_data/: yearly_data.json
stats-api/stats_api/templates/: arxiv_base.html  generic_exception.html  macros.html  main.html  monthly_downloads.html  monthly_downloads_js.html  monthly_submissions.html  monthly_submissions_js.html  stats_base.html  today.html  today_js.html
stats-api/stats_api/templates/stats/: archive_areagraph.html
stats-api/stats_api/utils/: database.py
stats-api/tests/: conftest.py  test_api.py  test_repository.py  test_routes.py  test_service.py  test_site_usage_repository.py  test_utils.py
stats-api/tests/data/: site_usage.py
stats-db/: README.md  atlas.hcl  pyproject.toml
stats-db/migrations/: 20250919192404.sql  20251028182344.sql  20251031190255.sql  20251111205428.sql  20251111211729.sql  20251111213702.sql  20260120194954.sql  20260121173949.sql  20260126171826.sql  20260126191509.sql  atlas.sum
stats-entities/: pyproject.toml
stats-entities/stats_entities/: site_usage.py  utils.py
stats-functions/: README.md  pyproject.toml
stats-functions/aggregate-hourly-downloads/src/: main.py  requirements.txt
stats-functions/aggregate_hourly_downloads/: README.md  twf
stats-functions/aggregate_hourly_downloads/src/: config.py  entities.py  main.py  models.py  requirements.in  requirements.txt
stats-functions/aggregate_hourly_downloads/tests/: test_aggregate_download_data.py
stats-functions/hourly_edge_requests/: twf
stats-functions/hourly_edge_requests/src/: config.py  main.py  models.py  requirements.txt
stats-functions/hourly_edge_requests/tests/: test_hourly_edge_requests.py
stats-functions/monthly_downloads/src/: config.py  main.py  requirements-dev.txt  requirements.txt
stats-functions/monthly_downloads/tests/: test_monthly_downloads.py
stats-functions/monthly_submissions/src/: config.py  entities.py  main.py  models.py  requirements.txt
stats-functions/monthly_submissions/tests/: test_monthly_submissions.py
stats-functions/stats_functions/: config.py  utils.py
stats-functions/tests/: test_utils.py
stats-project/: .gitignore  BACKENDREADME.md  Dockerfile.api  Dockerfile.ui  Makefile  README.md  package-lock.json  pyproject.toml
stats-project/backend/: __init__.py  api_utils.py  dockerfile  factory.py
stats-project/backend/config/: logging.py
stats-project/backend/utils/: database.py  logging.py
stats-project/frontend/: Dockerfile  package-lock.json
stats-project/stats/: __init__.py  factory.py
stats-project/stats-api/: __init__.py  api.py  dockerfile  factory.py  requirements.txt
stats-project/stats-api/services/: api_utils.py
stats-project/stats-api/utils/: logging.py
stats-project/stats-ui/src/components/charts/: DownloadsByCountry.js
stats-project/stats/routes/: api.py
stats-project/stats/services/: add_old_data.py  api_utils.py
stats-project/stats/static/: style.css
stats-project/stats/templates/stats/: category_areagraph.html  downloads_by_category.html  main.html
stats-project/stats/utils/: logging.py
stats-project/stats_api/: __init__.py  dockerfile  requirements.txt
stats-project/stats_api/routes/: api.py
stats-project/stats_api/services/: api_utils.py
stats-project/stats_api/utils/: database.py  logging.py
stats-project/tests/: conftest.py  inject_data.py  local_test_setup.sh  runTests.sh
stats-project/tests/docker-compose/: docker-compose.yaml
stats-ui/: package-lock.json  package.json
stats-ui/public/: index.html
stats-ui/src/: App.js  HelmetConfig.js  StatsCategory.js  StatsHome.js
stats/routes/: graph_routes.py
stats/services/: api_utils.py
stats/utils/: logging.py
statsentities/: utils.py
statsentities/src/: entities.py
statsfunctions/aggregate_hourly_downloads/: README.md
terraform/aggregate-hourly-downloads/: main.tf  variables.tf
terraform/aggregate_hourly_downloads/: main.tf  variables.tf
tests/: conftest.py
(+54 files in other folders)
