[project]
name = "stats"
version = "0.1.0"
description = "Backend for the usage stats page on arxiv.org"
requires-python = "~=3.10.0"
dependencies = [
    "atlas-provider-sqlalchemy>=0.4.0",
    "flask>=3.1.2,<4",
    "flask-cors>=6.0.1,<7",
    "flask-sqlalchemy>=3.1.1,<4",
    "pg8000>=1.31.4,<2",
    "python-dotenv>=1.1.1,<2",
]

[dependency-groups]
test = [
    "pytest>=8.4.2,<9",
    "ruff>=0.13.0,<0.14",
]

[tool.uv]
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
