[project]
name = "stats-api"
version = "0.1.0"
description = "API for the usage stats page on arxiv.org"
requires-python = "~=3.11.13"
dependencies = [
    "flask>=3.1.2,<4",
    "flask-cors>=6.0.1,<7",
    "flask-sqlalchemy>=3.1.1,<4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymysql[rsa]>=1.1.2",
    "pytest>=8.4.2",
    "python-dateutil>=2.9.0.post0",
    "stats-entities",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "ruff>=0.13.0,<0.14",
    "ty>=0.0.4",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
stats-entities = { path = "../stats-entities", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
