[project]
name = "statsentities"
version = "0.1.0"
description = "Entities for stats databases"
requires-python = "~=3.10.0"
dependencies = [
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
test = [
    "pytest>=8.4.2,<9",
    "ruff>=0.13.0,<0.14",
]

[tool.uv]
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
