[project]
name = "stats-entities"
version = "0.1.0"
description = "Entities for stats databases"
requires-python = "~=3.13.0"
dependencies = [
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
test = [
    "pytest>=9.0.3,<10",
    "ruff>=0.15.12,<0.16",
]

[tool.uv]
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
