[project]
name = "stats-functions"
version = "0.1.0"
description = "Shared code for stats cloud functions"
readme = "README.md"
requires-python = "~=3.11.13"
dependencies = [
    "cloud-sql-python-connector[pymysql]>=1.20.0",
    "cloudevents>=1.12.0",
    "google-cloud-logging>=3.13.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "ruff>=0.13.0,<0.14",
    "ty>=0.0.4",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["stats_functions"]

[tool.hatch.build.targets.sdist]
include = ["/stats_functions", "/tests", "pyproject.toml", "README.md"]
exclude = ["/aggregate_hourly_downloads", "/hourly_edge_requests", "/monthly_submissions", "/monthly_downloads"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
